cmake_minimum_required(VERSION 3.9)
project(libft)

set(CMAKE_CXX_STANDARD 11)

add_executable(libft
        gnlfnc/get_next_line.c
        gnlfnc/get_next_line.h
        gnlfnc/libft.h
        myfnc/ft_arrnew.c
        myfnc/ft_fill_array.c
        myfnc/ft_foreach.c
        myfnc/ft_gobig.c
        myfnc/ft_isstrofdigit.c
        myfnc/ft_rot_13.c
        myfnc/ft_sqrt.c
        myfnc/ft_tenton.c
        myfnc/libft.h
        printffnc/ft_corect.c
        printffnc/ft_corect_width_precision.c
        printffnc/ft_format_openers.c
        printffnc/ft_parsing.c
        printffnc/ft_printf.c
        printffnc/ft_printf.h
        printffnc/ft_stdfuncs.c
        printffnc/ft_wchar_t_char.c
        printffnc/ft_wchar_t_str.c
        printffnc/libft.h
        stdlibft/ft_atoi.c
        stdlibft/ft_bzero.c
        stdlibft/ft_isalnum.c
        stdlibft/ft_isalpha.c
        stdlibft/ft_isascii.c
        stdlibft/ft_isdigit.c
        stdlibft/ft_isprint.c
        stdlibft/ft_itoa.c
        stdlibft/ft_itoa_base.c
        stdlibft/ft_lstadd.c
        stdlibft/ft_lstdel.c
        stdlibft/ft_lstdelone.c
        stdlibft/ft_lstiter.c
        stdlibft/ft_lstmap.c
        stdlibft/ft_lstnew.c
        stdlibft/ft_memalloc.c
        stdlibft/ft_memccpy.c
        stdlibft/ft_memchr.c
        stdlibft/ft_memcmp.c
        stdlibft/ft_memcpy.c
        stdlibft/ft_memdel.c
        stdlibft/ft_memmove.c
        stdlibft/ft_memset.c
        stdlibft/ft_putchar.c
        stdlibft/ft_putchar_fd.c
        stdlibft/ft_putendl.c
        stdlibft/ft_putendl_fd.c
        stdlibft/ft_putnbr.c
        stdlibft/ft_putnbr_fd.c
        stdlibft/ft_putnstr.c
        stdlibft/ft_putstr.c
        stdlibft/ft_putstr_fd.c
        stdlibft/ft_strcat.c
        stdlibft/ft_strchr.c
        stdlibft/ft_strclr.c
        stdlibft/ft_strcmp.c
        stdlibft/ft_strcpy.c
        stdlibft/ft_strdel.c
        stdlibft/ft_strdup.c
        stdlibft/ft_strequ.c
        stdlibft/ft_striter.c
        stdlibft/ft_striteri.c
        stdlibft/ft_strjoin.c
        stdlibft/ft_strlcat.c
        stdlibft/ft_strlen.c
        stdlibft/ft_strmap.c
        stdlibft/ft_strmapi.c
        stdlibft/ft_strncat.c
        stdlibft/ft_strncmp.c
        stdlibft/ft_strncpy.c
        stdlibft/ft_strnequ.c
        stdlibft/ft_strnew.c
        stdlibft/ft_strnstr.c
        stdlibft/ft_strrchr.c
        stdlibft/ft_strsplit.c
        stdlibft/ft_strstr.c
        stdlibft/ft_strsub.c
        stdlibft/ft_strtrim.c
        stdlibft/ft_tolower.c
        stdlibft/ft_toupper.c
        stdlibft/libft.h
        mylibft.h)
